@@ -3,6 +3,7 @@
 /**
  *
  * Copyright 2012, Alain Peyrat
+ * Copyright 2012, Franck Villaume - TrivialDev
  * http://fusionforge.org/
  *
  * This file is part of FusionForge.
@@ -24,12 +25,12 @@
 
 require_once dirname(__FILE__).'/../common/include/env.inc.php';
 require_once $gfcommon.'include/pre.php';
-require_once $gfcommon.'tracker/ArtifactStorage.class.php';
+require_once $gfcommon.'docman/DocumentStorage.class.php';
 
 ini_set('memory_limit', -1);
 ini_set('max_execution_time', 0);
 
-$res = db_query_params('SELECT id FROM artifact_file WHERE bin_data !=$1', array(''));
+$res = db_query_params('SELECT docid FROM doc_data WHERE data !=$1', array(''));
 if (!$res) {
 	echo 'UPGRADE ERROR: '.db_error();
 	exit(1);
@@ -42,36 +43,36 @@ if (!is_dir($data)) {
 	system("chmod 0700 $data");
 }
 
-$as = new ArtifactStorage();
-$tmp = tempnam('/tmp', 'tracker');
+$ds = new DocumentStorage();
+$tmp = tempnam('/tmp', 'docman');
 
 while($row = db_fetch_array($res)) {
-	$res2 = db_query_params ('SELECT filesize, bin_data FROM artifact_file WHERE id=$1', 
-		array($row['id'])) ;
+	$res2 = db_query_params ('SELECT filesize, data FROM doc_data WHERE docid=$1', 
+		array($row['docid'])) ;
 	$row2 = db_fetch_array($res2);
-	$ret = file_put_contents($tmp, base64_decode($row2['bin_data']));
+	$ret = file_put_contents($tmp, base64_decode($row2['data']));
 	if ($ret === false) {
 		echo "UPGRADE ERROR: file_put_contents($tmp) error: returned false\n";
-		$as->rollback();
+		$ds->rollback();
 		exit(1);
 	}
 	if ($ret != $row2['filesize']) {
-		echo "UPGRADE ERROR: file_put_contents($tmp): size error ($ret != ".$row2['filesize'].")\n";
-		$as->rollback();
+		echo "UPGRADE ERROR: file_put_contents($tmp) size error: ($ret != ".$row2['filesize'].")\n";
+		$ds->rollback();
 		exit(1);
 	}
-	$ret = $as->store($row['id'], $tmp);
+	$ret = $ds->store($row['docid'], $tmp);
 	if (!$ret) {
 		echo "UPGRADE ERROR: $ret: ".$as->getErrorMessage()."\n";
-		$as->rollback();
+		$ds->rollback();
 		exit(1);
 	}
 }
 
-$as->commit();
+$ds->commit();
 
-db_query_params ('UPDATE artifact_file SET bin_data=$1', array(''));
+db_query_params ('UPDATE doc_data SET data=$1', array(''));
 
 echo "SUCCESS\n";
 
-?>
+?> 
